fix border radius on mobile

--- a/markup-challenges/loop3-step2/css/main.css
+++ b/markup-challenges/loop3-step2/css/main.css
@@ -51,6 +51,7 @@ body {
     max-width: 100%;
     width: 100%;
     padding: 1.6rem 0;
+    border-radius: unset;
   }
 }
 
